[gd_scene load_steps=6 format=2]

[ext_resource path="res://gui/button/button.tscn" type="PackedScene" id=1]
[ext_resource path="res://menus/main_menu/main_menu.gd" type="Script" id=2]
[ext_resource path="res://menus/main_menu/Fondo solo.png" type="Texture" id=3]
[ext_resource path="res://menus/main_menu/titlescree.png" type="Texture" id=4]
[ext_resource path="res://menus/main_menu/BUBLE BIND 01@2x.png" type="Texture" id=5]

[node name="main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 3 )

[node name="characters" type="Sprite" parent="."]
position = Vector2( 440, 543 )
texture = ExtResource( 4 )

[node name="play_button" parent="." instance=ExtResource( 1 )]
margin_left = 787.0
margin_top = 585.0
margin_right = 1864.0
margin_bottom = 768.0
rect_scale = Vector2( 1, 1 )
text = "Jugar"

[node name="exit_button" parent="." instance=ExtResource( 1 )]
margin_left = 787.0
margin_top = 818.0
margin_right = 1864.0
margin_bottom = 1001.0
rect_scale = Vector2( 1, 1 )
text = "Salir"

[node name="title" type="Sprite" parent="."]
position = Vector2( 1372, 159 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[connection signal="pressed" from="play_button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="exit_button" to="." method="_on_exit_button_pressed"]
